force-app/main/default/objects/Distributor_POS_Order__c/Distributor_POS_Order__c.object-meta.xml
<CustomObject>
    <description>Order information of the distributor, including the price from the distributor to the end-customer</description>
    <label>Distributor POS Order</label>
    <nameField>
        <displayFormat>DPOS-{0000}</displayFormat>
        <label>Distributor POS Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor POS Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>