force-app/main/default/objects/Distributor_POS_Order__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <description>Channel Manager of the Distributor Account
Orig: Distributor_Account__r.Channel_Manager__c</description>
    <formula>Distributor_Account__r.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;Distributor_Account__r.New_Channel_Manager__r.LastName</formula>
    <inlineHelpText>Channel Manager of the Distributor Account</inlineHelpText>
    <label>Channel Manager</label>
    <type>Text</type>
</CustomField>