force-app/main/default/objects/Distributor_POS_Order__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Distributor Account</description>
    <inlineHelpText>Distributor Account</inlineHelpText>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor POS Orders</relationshipLabel>
    <relationshipName>Distributor_POS_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>