force-app/main/default/objects/Distributor_POS_Order__c/fields/Distributor_Country__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Country__c</fullName>
    <description>Distributor country</description>
    <formula>Distributor_Account__r.BillingCountry</formula>
    <inlineHelpText>Distributor country</inlineHelpText>
    <label>Distributor Country</label>
    <type>Text</type>
</CustomField>