force-app/main/default/objects/Distributor_POS_Order__c/fields/Distributor_Margin__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Margin__c</fullName>
    <description>Distributor margin of the total sales to the end customer</description>
    <formula>(End_Customer_Price_Per_Unit__c -  Transfer_Price_Per_Unit__c) *  Quantity__c</formula>
    <inlineHelpText>Distributor margin of the total sales to the end customer</inlineHelpText>
    <label>Distributor Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>