force-app/main/default/objects/Distributor_POS_Order__c/fields/Distributor_Region__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Region__c</fullName>
    <description>Distributor region, from Region field of Distributor Account</description>
    <formula>Distributor_Account__r.Region__c</formula>
    <inlineHelpText>Distributor region, from Region field of Distributor Account</inlineHelpText>
    <label>Distributor Region</label>
    <type>Text</type>
</CustomField>