force-app/main/default/objects/Distributor_POS_Order__c/fields/Distributor_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Total_Sales__c</fullName>
    <description>End_Customer_Price_Per_Unit__c *  Quantity__c</description>
    <formula>End_Customer_Price_Per_Unit__c *  Quantity__c</formula>
    <inlineHelpText>End Customer Price Per Unit * Quantity</inlineHelpText>
    <label>Distributor Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>