force-app/main/default/objects/Distributor_POS_Order__c/fields/Distributor_Total_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Total_Sales_CHF__c</fullName>
    <description>https://wiki.u-blox.com/bin/view/Generic/IT.OpenIssues29177</description>
    <formula>IF(ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;),  USDtoCHF__c * Distributor_Total_Sales__c , 

  IF(ISPICKVAL(CurrencyIsoCode, &quot;EUR&quot;),  EURtoCHF__c * Distributor_Total_Sales__c , 

   IF(ISPICKVAL(CurrencyIsoCode, &quot;JPY&quot;), JPYtoCHF__c *  Distributor_Total_Sales__c , NULL) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Total Sales CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>