force-app/main/default/objects/Distributor_POS_Order__c/fields/End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End Customer Account, to whom the distributor has sold the products</description>
    <inlineHelpText>End Customer Account, to whom the distributor has sold the products</inlineHelpText>
    <label>End Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor POS Orders (End Customer Account)</relationshipLabel>
    <relationshipName>Distributor_POS_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>