force-app/main/default/objects/Distributor_POS_Order__c/fields/End_Customer_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Channel_Manager__c</fullName>
    <description>Orig: End_Customer_Account__r.Channel_Manager__c</description>
    <formula>End_Customer_Account__r.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;End_Customer_Account__r.New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Channel Manager</label>
    <type>Text</type>
</CustomField>