force-app/main/default/objects/Distributor_POS_Order__c/fields/End_Customer_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Price_Per_Unit__c</fullName>
    <description>Price from the distributor to the end customer</description>
    <inlineHelpText>Price from the distributor to the end customer</inlineHelpText>
    <label>End Customer Price Per Unit</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>