force-app/main/default/objects/Distributor_POS_Order__c/fields/EURtoCHF__c.field-meta.xml
<CustomField>
    <fullName>EURtoCHF__c</fullName>
    <description>Exchange rate of the month of Invoice Date, to be filled together with the other fields</description>
    <inlineHelpText>Exchange rate of the month of Invoice Date, to be filled together with the other fields</inlineHelpText>
    <label>EURtoCHF</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>