force-app/main/default/objects/Distributor_POS_Order__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date of invoice to the end customer</description>
    <inlineHelpText>Date of invoice to the end customer</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>