force-app/main/default/objects/Distributor_POS_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product sold to the End Customer Account</description>
    <inlineHelpText>Product sold to the End Customer Account</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Distributor POS Orders</relationshipLabel>
    <relationshipName>Distributor_POS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>