force-app/main/default/objects/Distributor_POS_Order__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Product Category, taken from the Product</description>
    <formula>text(Product__r.Product_Category__c)</formula>
    <inlineHelpText>Product Category, taken from the Product</inlineHelpText>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>