force-app/main/default/objects/Distributor_POS_Order__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <description>Product Center, taken from the Product</description>
    <formula>text(Product__r.Product_Center__c)</formula>
    <inlineHelpText>Product Center, taken from the Product</inlineHelpText>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>