force-app/main/default/objects/Distributor_POS_Order__c/fields/Project_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor POS Orders (Project Owner Account)</relationshipLabel>
    <relationshipName>Distributor_POS_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>