force-app/main/default/objects/Distributor_POS_Order__c/fields/Project_Owner_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Channel_Manager__c</fullName>
    <description>Orig: Project_Owner_Account__r.Channel_Manager__c</description>
    <formula>Project_Owner_Account__r.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;Project_Owner_Account__r.New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Channel Manager</label>
    <type>Text</type>
</CustomField>