force-app/main/default/objects/Distributor_POS_Order__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity sold to the End Customer Account</description>
    <inlineHelpText>Quantity sold to the End Customer Account</inlineHelpText>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>