force-app/main/default/objects/Distributor_POS_Order__c/fields/Transfer_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Price_Per_Unit__c</fullName>
    <description>Price per unit from u-blox to the distributor</description>
    <inlineHelpText>Price per unit from u-blox to the distributor</inlineHelpText>
    <label>Transfer Price Per Unit</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>