force-app/main/default/objects/Distributor_POS_Order__c/fields/u_blox_Total_Contribution_CHF__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Total_Contribution_CHF__c</fullName>
    <description>Total contribution of u-blox (Total Sales CHF - Total COGS CHF)</description>
    <formula>u_blox_Total_Sales_CHF__c - Total_COGS_CHF__c</formula>
    <inlineHelpText>Total contribution of u-blox (Total Sales CHF - Total COGS CHF)</inlineHelpText>
    <label>u-blox Total Contribution CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>