force-app/main/default/objects/Distributor_POS_Order__c/fields/u_blox_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Total_Sales__c</fullName>
    <description>Total sales of u-blox to the distributor</description>
    <formula>Transfer_Price_Per_Unit__c *  Quantity__c</formula>
    <inlineHelpText>Total sales of u-blox to the distributor</inlineHelpText>
    <label>u-blox Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>