force-app/main/default/objects/Distributor_POS_Order__c/fields/u_blox_Total_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Total_Sales_CHF__c</fullName>
    <description>Total sales to the distributor in CHF</description>
    <formula>CASE(text(CurrencyIsoCode),
&quot;EUR&quot;,  u_blox_Total_Sales__c  *  EURtoCHF__c ,
&quot;JPY&quot;,  u_blox_Total_Sales__c  *  JPYtoCHF__c ,
&quot;USD&quot;,  u_blox_Total_Sales__c  *  USDtoCHF__c ,
0)</formula>
    <inlineHelpText>Total sales to the distributor in CHF</inlineHelpText>
    <label>u-blox Total Sales CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>