force-app/main/default/objects/Distributor_POS_Order__c/validationRules/Use_Restriction_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Use_Restriction_Check</fullName>
    <active>true</active>
    <description>CEL products should have this field.</description>
    <errorConditionFormula>AND(
Product_Center__c=&quot;Cellular&quot;,
text(Use_Restriction__c)=&quot;Not applicable&quot;)</errorConditionFormula>
    <errorDisplayField>Use_Restriction__c</errorDisplayField>
    <errorMessage>Use Restriction must be defined for all Cellular products.</errorMessage>
</ValidationRule>