force-app/main/default/objects/Distributor_POS_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Account__c</columns>
    <columns>End_Customer_Account__c</columns>
    <columns>Project_Owner_Account__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Distributor_Margin_Pct__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Invoice_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>